--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                     <select id="paymentCart">
                         <option value="Transfer Bank">Transfer Bank (BRI)</option>
                         <option value="E-Wallet">Dana</option>
-                        <option value="DO">Pesanan di Antar (DO)</option>
+                        <option value="DO">Pesanan di Antar (COD)</option>
                     </select>
                 </div>
             </div>
@@ -1278,4 +1278,5 @@ Mohon segera diproses ya, makasih!
         }
     </script>
 </body>
+
 </html>
